[package]
name = "db_simulator"
version = "0.1.0"
authors = ["eric"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
rand = "0.8.3"
sha256 = "1.0.2"
postgres = { version = "0.19.1", features = ["with-serde_json-1"] }